# svg_font_renderer

./: .gitmodules  LICENSE  LISCENCE
src/: CMakeLists.txt  font_parser.hpp  font_renderer.cpp  font_renderer.hpp  font_renderer_config.h.in  image.cpp  image.hpp
src/tests/: CMakeLists.txt  svg_font_renderer.cpp  svg_font_renderer_smoke.cpp
src/third_party_builtin/nano_svg/: nanosvg.h
